--- a/package.json
+++ b/package.json
@@ -8,11 +8,14 @@
   },
   "dependencies": {
     "@react-native-community/async-storage": "^1.5.1",
+    "@react-native-community/geolocation": "^1.4.2",
     "axios": "^0.19.0",
+    "babel-eslint": "^10.0.2",
     "lodash": "^4.17.14",
     "qs": "^6.7.0",
     "react": "16.8.3",
-    "react-native": "0.59.9",
+    "react-native": "^0.60.4",
+    "react-native-draggable-flatlist": "^1.1.7",
     "react-native-elements": "^1.1.0",
     "react-native-gesture-handler": "^1.3.0",
     "react-native-vector-icons": "^6.6.0",
@@ -26,6 +29,11 @@
     "@babel/core": "7.4.5",
     "@babel/runtime": "7.4.5",
     "babel-jest": "24.8.0",
+    "eslint": "^5.16.0",
+    "eslint-config-airbnb": "^17.1.1",
+    "eslint-plugin-import": "^2.18.0",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-react": "^7.14.2",
     "jest": "24.8.0",
     "metro-react-native-babel-preset": "0.54.1",
     "react-test-renderer": "16.8.3"
