--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^0.19.0",
     "babel-eslint": "^10.0.2",
     "lodash": "^4.17.14",
+    "prop-types": "^15.7.2",
     "qs": "^6.7.0",
     "react": "16.8.3",
     "react-native": "^0.60.4",
