--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-native": "^0.60.4",
     "react-native-draggable-flatlist": "^1.1.7",
     "react-native-elements": "^1.1.0",
+    "react-native-fit-image": "^1.5.4",
     "react-native-gesture-handler": "^1.3.0",
     "react-native-vector-icons": "^6.6.0",
     "react-navigation": "^3.11.0",
