--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "@react-native-community/async-storage": "^1.5.1",
+    "@react-native-community/blur": "^3.3.1",
     "@react-native-community/geolocation": "^1.4.2",
     "axios": "^0.19.0",
     "babel-eslint": "^10.0.2",
