--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@react-native-community/geolocation": "^1.4.2",
     "axios": "^0.19.0",
     "babel-eslint": "^10.0.2",
+    "firebase": "^6.3.1",
     "lodash": "^4.17.14",
     "prop-types": "^15.7.2",
     "qs": "^6.7.0",
