--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "react-redux": "^7.1.0",
     "redux": "^4.0.4",
     "redux-thunk": "^2.3.0",
+    "remote-redux-devtools": "^0.5.16",
+    "remotedev-server": "^0.3.1",
     "rn-spotify-sdk": "^1.2.9"
   },
   "devDependencies": {
