--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -140,6 +140,7 @@ android {
 }
 
 dependencies {
+    implementation project(':react-native-splash-screen')
     implementation project(':@react-native-community_blur')
     implementation project(':@react-native-community_geolocation')
     implementation project(':@react-native-community_async-storage')
