--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-native": "^0.60.4",
     "react-native-draggable-flatlist": "^1.1.7",
     "react-native-elements": "^1.1.0",
+    "react-native-flash-message": "^0.1.13",
     "react-native-gesture-handler": "^1.3.0",
     "react-native-progress": "^3.6.0",
     "react-native-splash-screen": "^3.2.0",
