--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-native-elements": "^1.1.0",
     "react-native-flash-message": "^0.1.13",
     "react-native-gesture-handler": "^1.3.0",
+    "react-native-linear-gradient": "^2.5.6",
     "react-native-progress": "^3.6.0",
     "react-native-splash-screen": "^3.2.0",
     "react-native-vector-icons": "^6.6.0",
