--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.19.0",
     "babel-eslint": "^10.0.2",
     "firebase": "^6.3.1",
+    "geofirex": "0.0.6",
     "lodash": "^4.17.14",
     "prop-types": "^15.7.2",
     "qs": "^6.7.0",
