--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Octave",
+  "name": "octave",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -12,7 +12,7 @@
     "@react-native-community/geolocation": "^1.4.2",
     "axios": "^0.19.0",
     "babel-eslint": "^10.0.2",
-    "firebase": "^6.3.1",
+    "firebase": "^6.3.4",
     "geofirex": "0.0.6",
     "lodash": "^4.17.14",
     "prop-types": "^15.7.2",
@@ -22,6 +22,7 @@
     "react-native-draggable-flatlist": "^1.1.7",
     "react-native-elements": "^1.1.0",
     "react-native-flash-message": "^0.1.13",
+    "react-native-geolocation-service": "^3.0.0",
     "react-native-gesture-handler": "^1.3.0",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-progress": "^3.6.0",
@@ -33,7 +34,8 @@
     "redux-thunk": "^2.3.0",
     "remote-redux-devtools": "^0.5.16",
     "remotedev-server": "^0.3.1",
-    "rn-spotify-sdk": "^1.2.9"
+    "rn-spotify-sdk": "^1.2.9",
+    "rxjs": "^6.5.2"
   },
   "devDependencies": {
     "@babel/core": "7.4.5",
