--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "axios": "^0.19.0",
     "babel-eslint": "^10.0.2",
     "firebase": "^6.3.4",
+    "geocoder": "^0.2.3",
     "geofirex": "0.0.6",
+    "geolib": "^3.0.4",
     "lodash": "^4.17.14",
     "prop-types": "^15.7.2",
     "qs": "^6.7.0",
@@ -22,6 +24,7 @@
     "react-native-draggable-flatlist": "^1.1.7",
     "react-native-elements": "^1.1.0",
     "react-native-flash-message": "^0.1.13",
+    "react-native-geocoder": "^0.5.0",
     "react-native-geolocation-service": "^3.0.0",
     "react-native-gesture-handler": "^1.3.0",
     "react-native-linear-gradient": "^2.5.6",
@@ -34,6 +37,7 @@
     "redux-thunk": "^2.3.0",
     "remote-redux-devtools": "^0.5.16",
     "remotedev-server": "^0.3.1",
+    "reverse-geocoding": "^3.0.1",
     "rn-spotify-sdk": "^1.2.9",
     "rxjs": "^6.5.2"
   },
