--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-native-linear-gradient": "^2.5.6",
     "react-native-progress": "^3.6.0",
     "react-native-splash-screen": "^3.2.0",
+    "react-native-spotify": "^2.0.3",
     "react-native-vector-icons": "^6.6.0",
     "react-navigation": "^3.11.0",
     "react-redux": "^7.1.0",
