--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-navigation": "^3.11.0",
     "react-redux": "^7.1.0",
     "redux": "^4.0.4",
+    "redux-catch": "^1.3.1",
     "redux-thunk": "^2.3.0",
     "remote-redux-devtools": "^0.5.16",
     "remotedev-server": "^0.3.1",
