--- a/ios/Podfile
+++ b/ios/Podfile
@@ -11,6 +11,8 @@ target 'Octave' do
   target 'Octave-tvOSTests' do
     inherit! :search_paths
     # Pods for testing
+    pod 'react-native-config', :path => '../node_modules/react-native-config'
+
   end
 
   target 'OctaveTests' do
