--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "qs": "^6.7.0",
     "react": "16.8.3",
     "react-native": "^0.60.4",
+    "react-native-config": "^0.11.7",
     "react-native-draggable-flatlist": "^1.1.7",
     "react-native-elements": "^1.1.0",
     "react-native-flash-message": "^0.1.13",
