--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "@react-native-community/async-storage": "^1.5.1",
     "@react-native-community/blur": "^3.3.1",
     "@react-native-community/geolocation": "^1.4.2",
+    "appcenter": "2.3.0",
+    "appcenter-analytics": "2.3.0",
+    "appcenter-crashes": "2.3.0",
     "axios": "^0.19.0",
     "babel-eslint": "^10.0.2",
     "firebase": "^6.3.4",
@@ -21,6 +24,7 @@
     "qs": "^6.7.0",
     "react": "16.8.3",
     "react-native": "^0.60.4",
+    "react-native-code-push": "^5.7.0",
     "react-native-config": "^0.11.7",
     "react-native-draggable-flatlist": "^1.1.7",
     "react-native-elements": "^1.1.0",
