--- a/ios/ExampleSpotifyApp/Info.plist
+++ b/ios/ExampleSpotifyApp/Info.plist
@@ -17,7 +17,7 @@
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
-	<string>1.0</string>
+	<string>1.0.2</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleVersion</key>
@@ -40,7 +40,7 @@
 		</dict>
 	</dict>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string></string>
+	<string>To view rooms around you</string>
 	<key>UIAppFonts</key>
 	<array>
 		<string>AntDesign.ttf</string>
